[package]
name = "gm-code"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yy-boss = { path  = "../yy-boss", version = "0.5.0" }
lsp-types = { version = "0.82.0", features = ["proposed"] }
lsp-server = "0.4.0"
flexi_logger = "0.16"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.1"

anyhow = "1.0"
itertools = "0.9"
strum = "0.19"
strum_macros = "0.19"