[package]
name = "gm-code"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yy-boss = "0.5.14"
lsp-types = { version = "0.92.0", features = ["proposed"] }
lsp-server = "0.5.2"
flexi_logger = "0.22.3"
log = "0.4"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
url = "2.1"

anyhow = "1.0"
itertools = "0.10"
strum = "0.23"
strum_macros = "0.23"