[package]
name = "gm-code"
version = "0.1.0"
authors = ["Jonathan Spira <jjspira@gmail.com>"]
edition = "2021"

[dependencies]
gm-doc = { path = "../gm-doc" }
yy-boss = { path = "../yy-boss" }
yy-typings = { path = "../yy-typings" }
flexi_logger = "0.25.2"
log = "0.4.17"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
url = "2.3.1"

anyhow = "1.0.69"
itertools = "0.10.5"
strum = "0.24.1"
strum_macros = "0.24.3"
lsp-server = "0.7.4"
lsp-types = "0.94.1"
camino = "1.1.6"
